<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_h1"
            android:textColor="@color/roxo"
            android:textSize="52sp"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            android:layout_marginStart="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_h2"
            android:layout_marginStart="30dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/cinza"
            />

        <EditText
            android:id="@+id/nameRegister"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="46dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/hint_name"
            />

        <EditText
            android:id="@+id/telRegister"
            android:inputType="numberSigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/hint_tel"
            />

        <EditText
            android:id="@+id/emailRegister"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/hint_email_signin"
            />

        <EditText
            android:id="@+id/passwordRegister"
            android:inputType="numberPassword"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/hint_password_signin"
            android:drawableRight="@drawable/ic_baseline_visibility_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_confirm_password"
            android:layout_marginStart="34dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/cinza"
            />
        <EditText
            android:id="@+id/passwordConfirmRegister"
            android:inputType="numberPassword"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/hint_confirm_password"
            android:drawableRight="@drawable/ic_baseline_visibility_24"
            />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_signin"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:backgroundTint="@color/roxo"
            android:padding="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/haveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textColor="@color/cinza"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/logIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_login"
                android:textColor="@color/roxo"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/haveAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/haveAccount"
                app:layout_constraintTop_toTopOf="@id/haveAccount"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>