<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_h1"
            android:textColor="@color/roxo"
            android:textSize="55sp"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            android:layout_marginStart="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_h2"
            android:layout_marginStart="30dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/cinza"
            />

        <EditText
            android:id="@+id/emailEnter"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="14dp"
            android:hint="@string/hint_email_login"
            />

        <EditText
            android:id="@+id/passwordEnter"
            android:inputType="numberPassword"
            android:textSize="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/hint_password_login"
            android:drawableRight="@drawable/ic_baseline_visibility_24"
            />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/check_box"
            android:textColor="@color/cinza"
            android:textStyle="bold"
            android:textSize="12dp"
            />


        <Button
            android:id="@+id/btnEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/button_login"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:backgroundTint="@color/roxo"
            android:padding="10dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginStart="249dp"
            app:layout_constraintStart_toEndOf="@+id/checkbox"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/dontAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_account"
                android:textColor="@color/cinza"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/signUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_signup"
                android:textColor="@color/roxo"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/dontAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dontAccount"
                app:layout_constraintTop_toTopOf="@id/dontAccount"
                android:layout_marginStart="5dp"
                />


        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>


